--- a/date/2024-04/page-2.htm
+++ b/date/2024-04/page-2.htm
@@ -247,16 +247,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-6-12-free-high-speed-nodes.htm" title="6月12日→18.4M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址">6月12日→18.4M/S|2024年最新免费节点Clash/Shadowrocket/V2ray/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-21-clash-node-daily-updates.htm" title="8月21日→18.7M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址">8月21日→18.7M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-10-12-free-high-speed-nodes.htm" title="10月12日→20.3M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址">10月12日→20.3M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-16-free-shadowrocket-node.htm" title="7月16日→19.6M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址">7月16日→19.6M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-6-clash-node.htm" title="3月6日18M/S|Shadowrocket/V2ray/Clash/SSR免费节点每天更新订阅链接">3月6日18M/S|Shadowrocket/V2ray/Clash/SSR免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-6-free-high-speed-nodes.htm" title="8月6日→20.4M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址">8月6日→20.4M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/news/article-19058.htm" title="猫粮十大品牌（猫粮十大品牌排）">猫粮十大品牌（猫粮十大品牌排）</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-22-free-high-speed-nodes.htm" title="5月22日→20.5M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">5月22日→20.5M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-13-free-ssr-subscribe.htm" title="3月13日19.4M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接">3月13日19.4M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-15-free-ssr-node.htm" title="5月15日→20.3M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址">5月15日→20.3M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-2-free-v2ray.htm" title="8月2日→21.3M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址">8月2日→21.3M/S|2024年最新免费节点SSR/Clash/V2ray/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-1-free-node-subscribe.htm" title="10月1日→21M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">10月1日→21M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-8-free-node-subscribe.htm" title="4月8日→21.5M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接">4月8日→21.5M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-11-shadowrocket-node.htm" title="4月11日→22.4M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接">4月11日→22.4M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-30-free-shadowrocket-node.htm" title="5月30日→18.3M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">5月30日→18.3M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-8-15-free-clash-subscribe.htm" title="8月15日→18M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">8月15日→18M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-22-free-node-subscribe.htm" title="3月22日→20.3M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接">3月22日→20.3M/S|2024年最新免费节点V2ray/SSR/Shadowrocket/Clash订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-3-18-free-ssr-subscribe.htm" title="3月18日20.1M/S|Clash/Shadowrocket/V2ray/SSR免费节点每天更新订阅链接">3月18日20.1M/S|Clash/Shadowrocket/V2ray/SSR免费节点每天更新订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-11-19-node-share.htm" title="11月19日→21M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐">11月19日→21M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-10-18-clash-windows.htm" title="10月18日→19.6M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐">10月18日→19.6M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址，便宜机场推荐</a></li>
                     </ul>
     </div>
 </div>
@@ -268,7 +268,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">9</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
+                <h4><span class="badge" style="float: right;">12</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">33</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
