--- a/free-nodes/2024-12-3-free-high-speed-nodes.htm
+++ b/free-nodes/2024-12-3-free-high-speed-nodes.htm
@@ -109,6 +109,7 @@
 <p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p><p>&nbsp;</p><p></p><h2>订阅链接</h2><p>&nbsp;</p><p><strong>clash订阅链接</strong></p><p>https://clashgithub.github.io/uploads/2024/12/0-20241203.yaml</p><p>https://clashgithub.github.io/uploads/2024/12/1-20241203.yaml</p><p>https://clashgithub.github.io/uploads/2024/12/2-20241203.yaml</p><p>https://clashgithub.github.io/uploads/2024/12/3-20241203.yaml</p><p>https://clashgithub.github.io/uploads/2024/12/4-20241203.yaml</p><p>&nbsp;</p><p><strong>v2ray订阅链接:</strong></p><p>https://clashgithub.github.io/uploads/2024/12/0-20241203.txt</p><p>https://clashgithub.github.io/uploads/2024/12/1-20241203.txt</p><p>https://clashgithub.github.io/uploads/2024/12/2-20241203.txt</p><p>https://clashgithub.github.io/uploads/2024/12/3-20241203.txt</p><p>https://clashgithub.github.io/uploads/2024/12/4-20241203.txt</p><p><strong>sing-box订阅链接</strong></p><p>https://clashgithub.github.io/uploads/2024/12/20241203.json</p><p>&nbsp;</p><p>如果您需要高质量的付费服务,我们强烈推荐您试试「<a href="javascript:;" class="js_to" data-url="https://stkinv.net/#/register?code=" data-type="Situka" data-code="SV6L7u10" rel="nofollow noopener" style="color:#c00;">斯图卡</a> 」。提供全球范围内快速稳定的高速节点,轻松处理8K高清视频流量,并可解锁流媒体网站和chatGPT。其服务器性能出色,确保您享受到高品质的体验。</p>                <div class="clearfix"></div>
                 <div class="col-md-12 mt-5">
                                         <p>上一个：<a href="/free-nodes/2024-12-2-free-ssr-node.htm">12月2日→19.8M/S|2024年最新免费节点Shadowrocket/V2ray/Clash/SSR订阅链接地址，便宜机场推荐</a></p>
+                                        <p>下一个：<a href="/free-nodes/2024-12-4-free-clash-subscribe.htm">12月4日→19.4M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接地址，便宜机场推荐</a></p>
                                     </div>
                                 <div class="panel panel-default mt-5">
                     <div class="panel-heading">
@@ -137,16 +138,16 @@
     </div>
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
-                        <li class="py-2"><a href="/free-nodes/2024-5-3-clash-v2ray-ss-ssr.htm" title="5月3日→20.3M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址">5月3日→20.3M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-12-free-clash-subscribe.htm" title="9月12日→21.1M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址">9月12日→21.1M/S|2024年最新免费节点Clash/V2ray/Shadowrocket/SSR订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-9-21-free-v2ray.htm" title="9月21日→18.8M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址">9月21日→18.8M/S|2024年最新免费节点Shadowrocket/V2ray/SSR/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-5-19-clash-v2ray-ss-ssr.htm" title="5月19日→19.1M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址">5月19日→19.1M/S|2024年最新免费节点SSR/V2ray/Shadowrocket/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-30-node-share-links.htm" title="8月30日→19M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址">8月30日→19M/S|2024年最新免费节点V2ray/Clash/SSR/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-4-27-clash-v2ray-ss-ssr.htm" title="4月27日→19.7M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接">4月27日→19.7M/S|2024年最新免费节点Clash/SSR/V2ray/Shadowrocket订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-8-21-clash-node-daily-updates.htm" title="8月21日→18.7M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址">8月21日→18.7M/S|2024年最新免费节点V2ray/Shadowrocket/SSR/Clash订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-7-18-free-node-subscribe.htm" title="7月18日→20.5M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址">7月18日→20.5M/S|2024年最新免费节点V2ray/SSR/Clash/Shadowrocket订阅链接地址</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-21-clash-windows.htm" title="3月21日18.1M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接">3月21日18.1M/S|Clash/V2ray/Shadowrocket/SSR免费节点每天更新订阅链接</a></li>
-                        <li class="py-2"><a href="/free-nodes/2024-3-30-clash-node-daily-updates.htm" title="3月30日→19.2M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接">3月30日→19.2M/S|2024年最新免费节点Shadowrocket/Clash/SSR/V2ray订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-4-5-free-node-subscribe-links.htm" title="4月5日→22.2M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接">4月5日→22.2M/S|2024年最新免费节点Shadowrocket/SSR/Clash/V2ray订阅链接</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-6-free-ssr-node.htm" title="6月6日→18M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址">6月6日→18M/S|2024年最新免费节点Clash/Shadowrocket/SSR/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-20-free-v2ray.htm" title="6月20日→20.4M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址">6月20日→20.4M/S|2024年最新免费节点V2ray/Shadowrocket/Clash/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-13-free-shadowrocket-node.htm" title="7月13日→22.3M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址">7月13日→22.3M/S|2024年最新免费节点Clash/V2ray/SSR/Shadowrocket订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-2-free-clash.htm" title="6月2日→18.3M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址">6月2日→18.3M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-30-free-shadowrocket-node.htm" title="5月30日→18.3M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址">5月30日→18.3M/S|2024年最新免费节点Shadowrocket/SSR/V2ray/Clash订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-6-21-free-clash-subscribe.htm" title="6月21日→19M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址">6月21日→19M/S|2024年最新免费节点Clash/SSR/Shadowrocket/V2ray订阅链接地址</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-7-22-free-high-speed-nodes.htm" title="7月22日→21.4M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址">7月22日→21.4M/S|2024年最新免费节点Shadowrocket/Clash/V2ray/SSR订阅链接地址</a></li>
+                        <li class="py-2"><a href="/news/article-20881.htm" title="宠物粮市场前景如何（宠物粮食市场）">宠物粮市场前景如何（宠物粮食市场）</a></li>
+                        <li class="py-2"><a href="/free-nodes/2024-5-2-free-subscribe-node.htm" title="5月2日→19.3M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址">5月2日→19.3M/S|2024年最新免费节点SSR/Shadowrocket/V2ray/Clash订阅链接地址</a></li>
                     </ul>
     </div>
 </div>
@@ -158,7 +159,7 @@
     <div class="panel-body">
         <ul class="p-0 x-0" style="list-style: none;margin: 0;padding: 0;">
                         <li class="py-2">
-                <h4><span class="badge" style="float: right;">9</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
+                <h4><span class="badge" style="float: right;">12</span> <a href="/date/2024-12/" title="2024-12 归档">2024-12</a></h4>
             </li>
                         <li class="py-2">
                 <h4><span class="badge" style="float: right;">33</span> <a href="/date/2024-11/" title="2024-11 归档">2024-11</a></h4>
